--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: "Ubuntu";
+    
 }
 
 img {
@@ -38,12 +39,13 @@ main {
     width: 100px;
     height: 50px;
     margin-top: 5vh;
-    
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0.25));
 }
 
 .arrow-ico {
-    width: 42px;
-    height: 52px;
+    width: 34px;
+    height: 32px;
+    margin-top: 51px;
 
 }
 
@@ -51,12 +53,14 @@ main {
     width: 100px;
     height: 50px;
     margin-top: 5vh;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0.25));
 }
 
 label {
     color: rgb(255, 255, 255);
     font-weight: 400;
     font-size: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0.25));
 }
 
 select {
@@ -82,20 +86,45 @@ select {
     font-weight: 900px;
     padding-left: 0px; 
 }
-button {
-    font-size: 14px;
-    border-radius: 6px;
+button:hover {
+    opacity: .8;
+
+}
+
+button:active {
+    opacity: .5;
+}
+.convert-button {
+    font-size: 18px;
+    border-radius: 30px;
     margin-left: auto;
     margin-right: auto;
     display: block;
+    width: 220px;
+    height: 40px;
+    cursor: pointer;
+    background: whitesmoke;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0.25));
+}
+section {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    flex-direction: row;
+    margin-left: 4px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0.25))
 }
 p {
+    margin-top: 8px;
     font-size: 20px;
-    margin-left: 120px;
+    margin-left: 22px;
     color: white;
-    
-    
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0.25));
 }
+
+
 
 footer {
     color: red;
